# CuDiff

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/CuDiff/: CuDiff.h  Dual.h  Factory.h  Function.h  Operator.h  Platform.h  Traits.h  Tuple.h  VarLayout.h
include/CuDiff/ext/: glm.h
include/CuDiff/ext/glm/: Function.h  Traits.h  Wrap.h
samples/Benchmark/: main.cu
samples/test/: main.cpp  main.cu
